# burplabs

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py
burplabs/: cli.py
burplabs/labs/: sql_lab1.py  sql_lab11.py  sql_lab13.py  sql_lab2.py  sql_lab3.py  sql_lab6.py  sql_lab7.py  sql_lab9.py
burplabs/labs/API/: api_lab1.py  api_lab2.py  api_lab3.py  api_lab4.py  api_lab5.py
burplabs/labs/DOM-based-vuln/: dom_based_lab1.py  dom_based_lab2.py  dom_based_lab3.py  dom_based_lab4.py  dom_based_lab5.py
burplabs/labs/NoSQL/: no_sqli_lab1.py  no_sqli_lab2.py  no_sqli_lab3.py  no_sqli_lab4.py
burplabs/labs/OS-command-injection/: os_injection_lab1.py  os_injection_lab2.py  os_injection_lab3.py  os_injection_lab4.py  os_injection_lab5.py
burplabs/labs/SSTI/: ssti_lab1.py  ssti_lab2.py  ssti_lab3.py  ssti_lab4.py  ssti_lab5.py
burplabs/labs/XXE/: xxe_lab1.py  xxe_lab2.py  xxe_lab3.py  xxe_lab4.py  xxe_lab5.py  xxe_lab6.py  xxe_lab7.py  xxe_lab8.py
burplabs/labs/access control vuln/: access_control_lab1.py  access_control_lab10.py  access_control_lab11.py  access_control_lab12.py  access_control_lab13.py  access_control_lab2.py  access_control_lab3.py  access_control_lab4.py  access_control_lab5.py  access_control_lab6.py  access_control_lab7.py  access_control_lab8.py  access_control_lab9.py
burplabs/labs/authentication/: auth_lab1.py  auth_lab10.py  auth_lab11.py  auth_lab12.py  auth_lab2.py  auth_lab3.py  auth_lab4.py  auth_lab5.py  auth_lab6.py  auth_lab7.py  auth_lab8.py  auth_lab9.py
burplabs/labs/clickjacking/: clickjacking_lab1.py
burplabs/labs/sql/: sql_lab1.py  (+17 more)
portswiggerlab/: cli.py
portswiggerlab/labs/: sql_lab1.py  sql_lab2.py  sql_lab5.py
sql injection/: sqli-lab1.py
(+73 files in other folders)
