[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "burplabs"
version = "0.2.4"
description = "PortSwigger Lab Automation Tool"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Sneh", email = "bavarvasneh@gmail.com" }]
dependencies = [
    "requests",
    "beautifulsoup4",
    "prompt_toolkit",
    "colorama",
    "rich"
]
requires-python = ">=3.7"

[project.scripts]
burplabs = "burplabs.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
